// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-4a2ce0d6-1 eTjbcn undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-4a2ce0d6-2 fTISZk undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
